--- a/grrs/Cargo.toml
+++ b/grrs/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
 anyhow = "1.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.7"
+predicates = "2.1.4"
