--- a/input_output/Cargo.toml
+++ b/input_output/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
+is-terminal = "0.4.2"
 serde_json = "1.0.91"
