--- a/web_reqwest/Cargo.toml
+++ b/web_reqwest/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11.14", features = ["blocking"] }
 error-chain = "0.12.4"
+scraper = "0.14.0"
