--- a/web_reqwest/Cargo.toml
+++ b/web_reqwest/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.11.14", features = ["blocking"] }
 error-chain = "0.12.4"
 scraper = "0.14.0"
+rand = "0.8.5"
