--- a/chat_async/Cargo.toml
+++ b/chat_async/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-std = { version = "1.12.0", features = ["unstable"] }
+lazy_static = "1.4.0"
 serde = { version = "1.0.151", features = ["derive", "rc"] }
 serde_json = "1.0.91"
 tokio = { version = "1.26.0", features = ["sync"] }
