--- a/future_test/Cargo.toml
+++ b/future_test/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+waker-fn = "1.1.0"
+futures-lite = "1.12.0"
+crossbeam = "0.8.2"
