--- a/docker/Cargo.toml
+++ b/docker/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-docker-api = "0.12.2"
+containers-api = "0.9.0"
+docker-api = "0.14"
+futures-util = { version = "0.3", features = ["io"] }
 tokio = { version = "1.28.1", features = ["rt"] }
