--- a/interactive/Cargo.toml
+++ b/interactive/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-inquire = "0.6.2"
+inquire = { version = "0.6.2", features = ["date"] }
+chrono = "0.4.26"
