--- a/aya-xdp/aya-xdp-ebpf/Cargo.toml
+++ b/aya-xdp/aya-xdp-ebpf/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
 aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
 aya-xdp-common = { path = "../aya-xdp-common" }
+network-types = "0.0.4"
 
 [[bin]]
 name = "aya-xdp"
