--- a/async_tasks/Cargo.toml
+++ b/async_tasks/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indicatif = "0.17.5"
 rand = "0.8.5"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
