--- a/s3-client/Cargo.toml
+++ b/s3-client/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+async-recursion = "1.0.4"
 rust-s3 = "0.33.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
