--- a/s3-client/Cargo.toml
+++ b/s3-client/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 async-recursion = "1.0.4"
+env_logger = "0.10.0"
+log = "0.4.19"
 rust-s3 = "0.33.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
