--- a/load_conf/Cargo.toml
+++ b/load_conf/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 config-file = { version = "0.2.3", default-features = false, features = ["yaml"] }
 serde = { version = "1.0.164", features = ["derive"] }
+serde_valid = { version = "0.16.3", features = ["yaml"] }
+regex = "1.9.1"
