--- a/clickhouse-client/Cargo.toml
+++ b/clickhouse-client/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 clickhouse = "0.11.5"
+hyper = "0.14.27"
+hyper-tls = "0.5.0"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_repr = "0.1.12"
 tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread"] }
