--- a/clickhouse-client/Cargo.toml
+++ b/clickhouse-client/Cargo.toml
@@ -14,6 +14,7 @@ tokio-native-tls = "0.3.0"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_repr = "0.1.12"
 tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread"] }
+tokio-stream = "0.1.14"
 
 [dev-dependencies]
 clickhouse = { version = "0.11.5", features = ["test-util"] }
