--- a/leetcode/Cargo.toml
+++ b/leetcode/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "leetcode"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-unionfind = { path = "../unionfind" }
+[workspace]
+resolver = "2"
+members = [
+    "leetcode",
+    "xtask",
+]
