--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tui"
+name = "tui-test"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 crossterm = "0.27.0"
 tui = "0.19.0"
+test_macro = { path = "../test_macro" }
