--- a/web_warp/Cargo.toml
+++ b/web_warp/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 serde = { version = "1.0.164", features = ["derive"] }
 lazy_static = "1.4.0"
 reqwest = "0.11.23"
+aes-gcm = "0.10.3"
+hex = "0.4.3"
