--- a/aya-lsm-unshare/aya-lsm-unshare-ebpf/Cargo.toml
+++ b/aya-lsm-unshare/aya-lsm-unshare-ebpf/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 aya-bpf = { git = "https://github.com/aya-rs/aya" }
+aya-bpf-bindings = { git = "https://github.com/aya-rs/aya" }
 aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
 aya-lsm-unshare-common = { path = "../aya-lsm-unshare-common" }
 
