test with k8s client from inside
Signed-off-by: ZhengjunHUO <firelouiszj@hotmail.com>

--- a/k8s/Cargo.toml
+++ b/k8s/Cargo.toml
@@ -13,3 +13,4 @@ kube = "0.82.0"
 reqwest = "0.11.16"
 tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 tower = "0.4.13"
+openssl-sys = { version = "0.9.90", features = ["vendored"] }
