--- a/azure-sdk/Cargo.toml
+++ b/azure-sdk/Cargo.toml
@@ -11,4 +11,5 @@ azure_core = "0.21.0"
 azure_storage = "0.21.0"
 azure_storage_blobs = "0.21.0"
 futures = "0.3.28"
+lazy_static = "1.4.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
