--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.95"
 async-native-tls = "0.5.0"
 async-task = "4.7.1"
 clearscreen = "4.0.1"
+device_query = "2.1.0"
 env_logger = "0.11.6"
 futures-lite = "2.5.0"
 flume = "0.11.1"
