--- a/azure-sdk/Cargo.toml
+++ b/azure-sdk/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = "1.0.93"
 azure_core = "0.21.0"
 azure_storage = "0.21.0"
 azure_storage_blobs = "0.21.0"
+env_logger = "0.11.6"
 futures = "0.3.28"
 lazy_static = "1.4.0"
+log = "0.4.22"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
