--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -18,3 +18,4 @@ log = "0.4.22"
 rand = "0.8.5"
 smol = "1.3.0"
 tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
+tokio-util = { version = "0.7.10", features = ["rt"] }
