--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -17,5 +17,5 @@ hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"
 log = "0.4.22"
 rand = "0.8.5"
 smol = "1.3.0"
-tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
