--- a/async_rust_oreilly/Makefile
+++ b/async_rust_oreilly/Makefile
@@ -1,3 +1,6 @@
 .PHONY: ch3_async_queue
 ch3_async_queue:
 	@RUST_LOG=info cargo run --bin ch3_async_queue
+
+.PHONY: ch9_decorator_pattern
+	@cargo run --features "decorator_test" --bin ch9_decorator_pattern
