--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -21,3 +21,6 @@ smol = "1.3.0"
 tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 uuid = { version = "1.12.1", features = ["v4"] }
+
+[features]
+decorator_test = []
