build async server from std: prepare data layer
Signed-off-by: ZhengjunHUO <firelouiszj@hotmail.com>

--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -24,3 +24,8 @@ uuid = { version = "1.12.1", features = ["v4"] }
 
 [features]
 decorator_test = []
+
+[workspace]
+members = [
+    "data_layer",
+]
