--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -15,6 +15,7 @@ flume = "0.11.1"
 http = "0.2.9"
 hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"] }
 log = "0.4.22"
+mockall = "0.13.1"
 rand = "0.8.5"
 serde_json = "1.0.138"
 smol = "1.3.0"
