--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -16,7 +16,9 @@ http = "0.2.9"
 hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"] }
 log = "0.4.22"
 mockall = "0.13.1"
+mockito = "1.6.1"
 rand = "0.8.5"
+reqwest = { version = "0.11.22", features = ["json"] }
 serde_json = "1.0.138"
 smol = "1.3.0"
 tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
