--- a/async_rust_oreilly/Cargo.toml
+++ b/async_rust_oreilly/Cargo.toml
@@ -22,6 +22,7 @@ reqwest = { version = "0.11.22", features = ["json"] }
 serde_json = "1.0.138"
 smol = "1.3.0"
 tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
+tokio-test = "0.4.3"
 tokio-util = { version = "0.7.10", features = ["rt"] }
 uuid = { version = "1.12.1", features = ["v4"] }
 
