--- a/oidc/Cargo.toml
+++ b/oidc/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4"
 anyhow = "1.0.98"
+derive_more = "2.0.1"
 openidconnect = "4.0.0"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
