--- a/oidc/Cargo.toml
+++ b/oidc/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.98"
 derive_more = "2.0.1"
 openidconnect = "4.0.0"
 serde = "1.0"
+uuid = { version = "1.16.0", features = ["serde", "v4"] }
