--- a/oidc/Cargo.toml
+++ b/oidc/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-session = { version = "0.10.1", features = ["cookie-session"] }
+actix-session-sqlx-postgres = "0.3.0"
 anyhow = "1.0.98"
 derive_more = "2.0.1"
 openidconnect = "4.0.0"
