--- a/oidc/Cargo.toml
+++ b/oidc/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 actix-web = "4"
 actix-session = { version = "0.10.1" }
 anyhow = "1.0.98"
+chrono = { version = "0.4.41", features = ["serde"] }
 derive_more = "2.0.1"
 openidconnect = "4.0.0"
 serde = "1.0"
 serde_json = "1.0.140"
-sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
+sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
 time = "0.3.41"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
