--- a/oidc/Cargo.toml
+++ b/oidc/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4"
+actix-cors = "0.7.1"
 actix-session = { version = "0.10.1" }
+actix-web = "4"
 anyhow = "1.0.98"
 chrono = { version = "0.4.41", features = ["serde"] }
 derive_more = "2.0.1"
+env_logger = "0.10.0"
+juniper = "0.16.1"
+log = "0.4.19"
 openidconnect = "4.0.0"
 serde = "1.0"
 serde_json = "1.0.140"
