--- a/web_socket/Cargo.toml
+++ b/web_socket/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
 tokio-tungstenite = "0.28"
+futures-channel = "0.3.31"
 futures-util = "0.3"
