--- a/web_socket/Cargo.toml
+++ b/web_socket/Cargo.toml
@@ -9,3 +9,4 @@ tokio-native-tls = "0.3.1"
 tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
 futures-channel = "0.3.31"
 futures-util = "0.3"
+names = "0.14"
