feat: websocket server/client introduce First Message Protocol to register client name upon connection
Signed-off-by: ZhengjunHUO <firelouiszj@hotmail.com>

--- a/web_socket/Cargo.toml
+++ b/web_socket/Cargo.toml
@@ -10,3 +10,5 @@ tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
 futures-channel = "0.3.31"
 futures-util = "0.3"
 names = "0.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
